--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,11 @@
             <version>4.5</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>annotations</artifactId>
+            <version>9.0.4</version>
+        </dependency>
     </dependencies>
 </project>
